--- a/Diga.Core.Json/Diga.Core.Json.csproj
+++ b/Diga.Core.Json/Diga.Core.Json.csproj
@@ -20,6 +20,9 @@
 		<Version>1.0.1</Version>
 		<PackageIcon>logo.png</PackageIcon>
 		<RootNamespace>Diga.Core.Json</RootNamespace>
+		<SignAssembly>true</SignAssembly>
+		<DelaySign>false</DelaySign>
+		<AssemblyOriginatorKeyFile>diga.core.json.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 
 
